[gd_scene load_steps=4 format=3 uid="uid://dcdkapui08olm"]

[ext_resource type="Script" uid="uid://n38bvl3f4eej" path="res://scripts/spaceobjectsingle.gd" id="1_7x4rf"]
[ext_resource type="PackedScene" uid="uid://dp48tk7ctl8s2" path="res://scene/comets.tscn" id="2_hix8b"]

[sub_resource type="Curve2D" id="Curve2D_hix8b"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 252, 54, 0, 0, 0, 0, 402, 206, 0, 0, 0, 0, 326, 292, 0, 0, 0, 0, 194, 348)
}
point_count = 4

[node name="spaceobjectsingle" type="Node2D"]
script = ExtResource("1_7x4rf")
objectsc = ExtResource("2_hix8b")
duration = 7
direction = 1.0
speed = 400
refire = true
refire_speed = 0.001

[node name="StartTimer" type="Timer" parent="."]

[node name="refire" type="Timer" parent="."]
wait_time = 0.05

[node name="duration" type="Timer" parent="."]
wait_time = 6.113

[node name="path" type="Path2D" parent="."]
curve = SubResource("Curve2D_hix8b")

[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="refire" to="." method="_on_refire_timeout"]
[connection signal="timeout" from="duration" to="." method="_on_duration_timeout"]
